--- a/redhorn/src/app/pages/capabilities/capabilities.component.html
+++ b/redhorn/src/app/pages/capabilities/capabilities.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid" id="capabilites_row">
     <div class="row light capabilites_first_row">
-        <div class="col-lg-4 col-md-6 col-sm-12 pr-lg-5">
+        <div class="col-lg-4 col-md-6 col-sm-12 pr-lg-5 fromleftfadeanimation">
             <h1 class="pb-4">Capabilties</h1>
             <p>Red Horn was founded with a very simple concept in mind: we want to get shit done. We believe all companies no matter if you are just starting out or  in growth phase can benefit from a CMO-level expert to help lead digital marketing efforts.</p>
         </div>
         <div class="col-lg-1 col-md-0 text-center"></div>
         <div class="col-lg-7 col-md-6 col-sm-12 text-center">
-            <img class="img-fluid" src="https://www.redhorndigital.com/wp-content/uploads/2020/03/capabilities-hero.svg">
+            <img class="img-fluid fromrightfadeanimation" src="https://www.redhorndigital.com/wp-content/uploads/2020/03/capabilities-hero.svg">
         </div>
     </div>
     <div class="row light">
@@ -16,30 +16,30 @@
     </div>
     <div class="row light mb-5 cpb-lg-6">
         <div class="col-lg-4 col-md-6 col-sm-12 text-center m-auto px-5 cpb-lg-3">
-            <div>
+            <div class="frombottomfadeanimation">
                 <h4 class="mt-5 pt-lg-5">Sexy, effective designs</h4>
                 <p class="pt-4 line_after_text">Our mind-blowing design work moves effortlessly across multiple channels and touchpoints and will seduce new customers and remind existing contacts why they fell in love with you in the first place.</p>
             </div>
-            <div>
+            <div class="frombottomfadeanimation">
                 <h4 class="mt-4 pt-lg-2">We’ve never met a risk we wouldn’t take</h4>
                 <p class="pt-4 line_after_text">We make ballsy moves–use it to your email advantage. We also meticulously track KPIs and act accordingly, so the newest version is also the most effective.</p>
             </div>
-            <div>
+            <div class="frombottomfadeanimation">
                 <h4 class="mt-4 pt-lg-2">Lord your earnings over the competition</h4>
                 <p class="pt-4">Our campaigns will supercharge your results–you’ll meet or exceed your ROI with us and come back for more.</p>
             </div>
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-12 mb-5">
+        <div class="col-lg-12 mb-5 fromleftfadeanimation">
             <h2>Red Horn<br>Capabilities</h2>
         </div>
     </div>
     <div class="row capabilites_first_row pb-5">
         <div class="col-lg-4 mt-lg-0 mt-4">
-            <img src="https://www.redhorndigital.com/wp-content/uploads/2020/03/research-branding-1.svg">
+            <img class="img-fluid frombottomfadeanimation" src="https://www.redhorndigital.com/wp-content/uploads/2020/03/research-branding-1.svg">
             <h4 class="mt-4 pt-2 pb-2">Research & Branding</h4>
-            <ul class="pl-0 pt-1">
+            <ul class="pl-0 pt-1 fromleftfadeanimation">
                 <li>Brand Strategy &amp; Experience</li>
                 <li>Guidelines &amp; Systems</li>
                 <li>Content Strategy</li>
@@ -48,9 +48,9 @@
             </ul>
         </div>
         <div class="col-lg-4 mt-lg-0 mt-4">
-            <img src="https://www.redhorndigital.com/wp-content/uploads/2020/03/web-digital.svg">
+            <img class="img-fluid frombottomfadeanimation" src="https://www.redhorndigital.com/wp-content/uploads/2020/03/web-digital.svg">
             <h4 class="mt-4 pt-2 pb-2">Web & Digital</h4>
-            <ul class="pl-0 pt-1">
+            <ul class="pl-0 pt-1 frombottomfadeanimation">
                 <li>Digital Strategy</li>
                 <li>UX &amp; UI Design</li>
                 <li>Functional Prototyping</li>
@@ -59,9 +59,9 @@
             </ul>
         </div>
         <div class="col-lg-4 mt-lg-0 mt-4">
-            <img src="https://www.redhorndigital.com/wp-content/uploads/2020/03/hypergrowth.svg">
+            <img class="img-fluid frombottomfadeanimation" src="https://www.redhorndigital.com/wp-content/uploads/2020/03/hypergrowth.svg">
             <h4 class="mt-4 pt-2 pb-2">Hypergrowth</h4>
-            <ul class="pl-0 pt-1">
+            <ul class="pl-0 pt-1 fromrightfadeanimation">
                 <li>Growth Strategy</li>
                 <li>Sales Enablement</li>
                 <li>Hubspot Account Creation &amp; Analytics</li>
