--- a/redhorn/src/app/pages/homepage/homepage.component.scss
+++ b/redhorn/src/app/pages/homepage/homepage.component.scss
@@ -4,7 +4,7 @@ a:hover { text-decoration: none ; }
     .three-cols-second-row .col-lg-4:nth-child(1) .opt-col { border: solid 6px #000 ; padding: 60px 0 110px 0 ; }
     .three-cols-second-row .col-lg-4:nth-child(1) .opt-col img { max-width: 88%; position: absolute; top: 28%; mix-blend-mode: screen ; }
     .three-cols-second-row .col-lg-4:nth-child(1) .opt-col h1 { background-color: #fff ; z-index: 1 ; }
-    .three-cols-second-row .col-lg-4:nth-child(2) { transform: translateY(48%); }
+    .three-cols-second-row .col-lg-4:nth-child(2) { margin-top: 9em; }
     .three-cols-second-row .col-lg-4:nth-child(2) .opt-col { background-color: #F3F3F3 ; padding: 60px 0 80px 0 ; }
     .three-cols-second-row .col-lg-4:nth-child(3) .opt-col { background-color: #ff0000 ; color: #fff ; padding: 50px 0 80px 0 ;}
     // div.row #huvr {  }
