--- a/redhorn/src/app/pages/contact-us/contact-us.component.html
+++ b/redhorn/src/app/pages/contact-us/contact-us.component.html
@@ -1,7 +1,7 @@
 <div class="first_contact_page"  style="background-color: #F6F7F9;">
     <div class="container-fluid">
         <div class="row pb-5">
-            <div class="col-lg-6 pb-lg-3">
+            <div class="col-lg-6 pb-lg-3 fromleftfadeanimation">
                 <h1 class="pb-4">Hello, We’ve been expecting you.</h1>
                 <h6 class="custom_heading">— Interested in working with us? We’d love to hear from you.</h6>
             </div>
