--- a/redhorn/src/app/layouts/red-bottom-row/red-bottom-row.component.html
+++ b/redhorn/src/app/layouts/red-bottom-row/red-bottom-row.component.html
@@ -1,17 +1,18 @@
-<div class="row">
+<div class="row pt-5 pt-lg-0">
     <div class="col-lg-12">
-        <div class="row cpy-lg-6 light cpx-lg-6 cpy-sm-3">
+        <div class="row cpy-sm-3 redrow light">
             <div class="bg-img" style="background-image: url('https://www.redhorndigital.com/wp-content/uploads/2020/03/bg.svg');">
             </div>
-            <div class="col-lg-5 cpx-lg-3 cpy-lg-3 fromleftfadeanimation">
-                <div class="pl-4">
+            <div class="col-lg-6 cpx-lg-3 cpy-lg-3">
+                <div class="pl-4 fromleftfadeanimation">
                     <h3>Ready to move fast and hard toward winning? Contact Us</h3>
                 </div>
             </div>
-            <div class="col-lg-1"></div>
-            <div class="col-lg-5 frombottomfadeanimation cpx-lg-3 cpy-lg-3 borderedBottomCol">
-                <h3 class="pb-2"><a class="light" href="#">+ Book a call</a><br><span class="borderBottom"></span></h3>
-                <h3 class="pb-2"><a class="light" href="#">+ contact@redhorn.com</a><br><span class="borderBottom"></span></h3>
+            <div class="col-lg-6 cpx-lg-3 cpy-lg-3 borderedBottomCol">
+                <div class="frombottomfadeanimation">
+                    <h3 class="pb-2"><a class="light" href="#">+ Book a call</a><br><span class="borderBottom"></span></h3>
+                    <h3 class="pb-2"><a class="light" href="#">+ contact@redhorn.com</a><br><span class="borderBottom"></span></h3>
+                </div>
             </div>
         </div>
     </div>
