--- a/redhorn/src/app/pages/capabilities/capabilities.component.html
+++ b/redhorn/src/app/pages/capabilities/capabilities.component.html
@@ -1,8 +1,10 @@
-<div class="container-fluid" id="capabilites_row">
+<div class="container" id="capabilites_row">
     <div class="row light capabilites_first_row">
-        <div class="col-lg-4 col-md-6 col-sm-12 pr-lg-5 fromleftfadeanimation">
-            <h1 class="pb-4">Capabilties</h1>
-            <p>Red Horn was founded with a very simple concept in mind: we want to get shit done. We believe all companies no matter if you are just starting out or  in growth phase can benefit from a CMO-level expert to help lead digital marketing efforts.</p>
+        <div class="col-lg-4 col-md-6 col-sm-12 pr-lg-5">
+            <div class="fromleftfadeanimation">
+                <h1 class="pb-4">Capabilties</h1>
+                <p>Red Horn was founded with a very simple concept in mind: we want to get shit done. We believe all companies no matter if you are just starting out or  in growth phase can benefit from a CMO-level expert to help lead digital marketing efforts.</p>
+            </div>
         </div>
         <div class="col-lg-1 col-md-0 text-center"></div>
         <div class="col-lg-7 col-md-6 col-sm-12 text-center">
@@ -30,9 +32,11 @@
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="col-lg-12 mb-5 fromleftfadeanimation">
-            <h2>Red Horn<br>Capabilities</h2>
+</div>
+<div class="container">
+    <div class="row light_start">
+        <div class="col-lg-12 mb-5">
+            <h2 class="fromleftfadeanimation">Red Horn<br>Capabilities</h2>
         </div>
     </div>
     <div class="row capabilites_first_row pb-5">
