--- a/redhorn/src/app/pages/contact-us/contact-us.component.html
+++ b/redhorn/src/app/pages/contact-us/contact-us.component.html
@@ -1,15 +1,15 @@
 <div class="first_contact_page"  style="background-color: #F6F7F9;">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row pb-5">
-            <div class="col-lg-6 pb-lg-3 fromleftfadeanimation">
+            <div class="col-lg-8 pb-lg-3 fromleftfadeanimation">
                 <h1 class="pb-4">Hello, We’ve been expecting you.</h1>
                 <h6 class="custom_heading">— Interested in working with us? We’d love to hear from you.</h6>
             </div>
-            <div class="col-lg-6"></div>
+            <div class="col-lg-4"></div>
         </div>
     </div>
 </div>
-<div class="container-fluid">
+<div class="container">
     <div class="row pt-lg-5 mt-3">
         <div class="col-lg-6 col-md-12 col-sm-12 contact_form_column">
             <h3 class="pb-3" style="color: #252525;">Contact</h3>
@@ -37,9 +37,9 @@
                         Send Message</button>
                 </form>
         </div>
-        <div class="col-lg-6 col-md-12 col-sm-12 pr-5 pt-lg-0 pt-4">
+        <div class="col-lg-6 col-md-12 col-sm-12 pt-lg-0 pt-4">
             <h3 style="color: #252525;">Email</h3>
-            <p class="custom_p pt-3 pb-lg-5 mb-3">contact@redhorn.com</p>
+            <p class="custom_p pt-3 pb-lg-3 mb-5">contact@redhorn.com</p>
             <h3 class="pb-2" style="color: #252525;">Book a Call</h3>
             <p class="custom_p mt-1 mb-5 pb-lg-3">Book a no-nonsense call, we'll tell you exactly what we would do if we were you.</p>
             <a target="_blank" href="https://meetings.hubspot.com/redhorn/20-min-consultation">    
