--- a/redhorn/src/app/pages/homepage/homepage.component.html
+++ b/redhorn/src/app/pages/homepage/homepage.component.html
@@ -1,56 +1,70 @@
-<div class="container-fluid">
-    <div class="row cpt-lg-6 cpb-lg-3">
-        <div class="col-lg-6 cpr-lg-6 col-sm-12 pb-4">
-            <h1 class="pr-1 pb-4 mb-lg-4 frombottomfadeanimation">
+<div class="container">
+    <div class="row cpt-lg-6 cpb-lg-3 cpt-sm-3">
+        <div class="col-lg-7 col-sm-12 pb-4 dark pr-lg-5 pl-lg-0">
+            <h1 class="pr-lg-5 pb-4 mb-lg-4 frombottomfadeanimation">
                 Reevaluate every other company that claims to be a partner
             </h1>
             <button type="button" class="btn btn-accent btn-mx-lg mt-lg-4 frombottomfadeanimation">
                 Learn More
             </button>
         </div>
-        <div class="col-lg-6 col-sm-12"></div>
+        <div class="col-lg-5 col-sm-12"></div>
     </div>
+</div>
+<div class="container-fluid">
     <div class="row three-cols-second-row cpt-lg-6">
-        <div class="col-lg-4 col-sm-12 pr-4 pr-lg-4 cpy-sm-6 fromleftfadeanimation">
-            <div class="opt-col">
-                <img src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_636/https://www.redhorndigital.com/wp-content/uploads/2020/03/stripe-pattern-2.png" alt="">
-                <h1 class="py-lg-4 my-lg-4 pl-1 ml-1 mr-1"><span style="color: #0000003d !important;">We get </span> <br> shit done.</h1>
+        <div class="col-lg-4 col-sm-12 pr-4 pr-lg-4 cpy-sm-6">
+            <div class="fromleftfadeanimation">
+                <div class="opt-col">
+                    <img src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_636/https://www.redhorndigital.com/wp-content/uploads/2020/03/stripe-pattern-2.png" alt="">
+                    <h1 class="py-lg-4 my-lg-4 pl-1 ml-1 mr-1"><span style="color: #0000003d !important;">We get </span> <br> shit done.</h1>
+                </div>
             </div>
         </div>
-        <div class="col-lg-4 col-sm-12 pr-4 cpy-sm-6 frombottomfadeanimation">
-            <div class="opt-col">
-                <h1 class="pt-1 pb-1 pl-2">
-                    We<br>
-                    drive<br>
-                    results —
-                </h1>
+        <div class="col-lg-4 col-sm-12 pr-4 cpy-sm-6">
+            <div class="frombottomfadeanimation">
+                <div class="opt-col">
+                    <h1 class="pt-1 pb-1 pl-2">
+                        We<br>
+                        drive<br>
+                        results —
+                    </h1>
+                </div>
             </div>
         </div>
-        <div class="col-lg-4 col-sm-12 pr-4 cpy-sm-6 fromrightfadeanimation">
-            <div class="opt-col">
-                <h1 class="pt-1 pb-1 pl-2">
-                    When<br>
-                    you win,<br>
-                    we win —
-                </h1>
+        <div class="col-lg-4 col-sm-12 pr-4 cpy-sm-6">
+            <div class="fromrightfadeanimation">
+                <div class="opt-col">
+                    <h1 class="pt-1 pb-1 pl-2">
+                        When<br>
+                        you win,<br>
+                        we win —
+                    </h1>
+                </div>
             </div>
         </div>
     </div>
+</div>
+<div class="container">
     <div class="row pt-4 cpb-lg-6">
-        <div class="col-lg-6 cpl-lg-6">
+        <div class="col-lg-6 pl-lg-3">
             <img class="img-fluid fromleftfadeanimation" src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_583/https://www.redhorndigital.com/wp-content/uploads/2020/03/rectangle.png">
         </div>
-        <div class="col-lg-6 cpr-lg-6 pt-4 fromrightfadeanimation">
-            <h5 style="color: #7f7f7f ;" class="pb-3">We're not interested in being just a resource</h5>
-            <h2 class="pb-2">We want to get into the trenches</h2>
-            <div class="pb-3">
-                <p class="pb-3">And help you achieve the impossible; when you succeed, we succeed. We drive results and smash goals every day before breakfast. We’d love to smash yours, too.</p>
-                <p>Need help with your B2B marketing? Get at us and we’ll ruin you for all other agencies.</p>
+        <div class="col-lg-6 pr-lg-3 pt-4">
+            <div class="fromrightfadeanimation">
+                <h5 style="color: #7f7f7f ;" class="pb-3">We're not interested in being just a resource</h5>
+                <h2 class="pb-2">We want to get into the trenches</h2>
+                <div class="pb-3">
+                    <p class="pb-3">And help you achieve the impossible; when you succeed, we succeed. We drive results and smash goals every day before breakfast. We’d love to smash yours, too.</p>
+                    <p>Need help with your B2B marketing? Get at us and we’ll ruin you for all other agencies.</p>
+                </div>
+                <button type="button" class="btn btn-accent btn-mx-lg btn-block"> Book a no-nonsense 20 min consultation </button>
             </div>
-            <button type="button" class="btn btn-accent btn-mx-lg btn-block"> Book a no-nonsense 20 min consultation </button>
         </div>
     </div>
-    <div class="row three_columns_row cpt-lg-6 cpb-lg-6 cpy-lg-6 mt-5">
+</div>
+<div class="container">
+    <div class="row px-lg-5 cpt-lg-6 cpb-lg-6 cpy-lg-6 mt-5">
         <div class="col-lg-4 mt-lg-0 mt-4">
             <img class="img-fluid frombottomfadeanimation" src="https://www.redhorndigital.com/wp-content/uploads/2020/03/research-branding-1.svg">
             <h4 class="mt-4 pt-2 pb-2">Research & Branding</h4>
@@ -89,6 +103,8 @@
             </ul>
         </div>
     </div>
+</div>
+<div class="container">
     <div class="row cpt-lg-6 mt-lg-0 mt-5">
         <div class="col-lg-12 text-center">
             <h5 style="color: #7f7f7f ;" class="pb-1 mb-lg-4">OUR WORK</h5>    
@@ -96,7 +112,7 @@
         </div>
     </div>
     <!-- Start of Huver row -->
-    <div class="row cpt-lg-6 cpx-lg-3 mt-lg-0 mt-4">
+    <div class="row cpt-lg-6 mt-lg-0 mt-4">
         <div class="col-lg-12">
             <div class="row cpt-lg-6 pl-lg-0 pb-lg-4 mb-4 py-4">
                 <div class="bg-img" id="huvr" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/graphic.png');">
@@ -115,7 +131,7 @@
     </div>
     <!-- End of Huver row -->
     <!-- Start of PMC row -->
-    <div class="row cpx-lg-3 mt-5">
+    <div class="row mt-5">
         <div class="col-lg-12">
             <div class="row pl-lg-0 mb-4 py-4">
                 <div class="bg-img" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/graphic-1.png');">
@@ -134,7 +150,7 @@
     </div>
     <!-- End of PMC row -->
     <!-- Start of Inzata row -->
-    <div class="row cpx-lg-3 mt-5">
+    <div class="row mt-5">
         <div class="col-lg-12">
             <div class="row cpt-lg-6 pb-lg-0 pl-lg-0 mb-4 py-4">
                 <div class="bg-img" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/graphic-2.png');">
@@ -153,7 +169,7 @@
     </div>
     <!-- End of Inzata row -->
     <!-- Start of IXRF row -->
-    <div class="row cpx-lg-3 my-5">
+    <div class="row my-5">
         <div class="col-lg-12">
             <div class="row cpt-lg-6 pl-lg-0 mb-4 py-4">
                 <div class="bg-img" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/ixrf-system.jpg');">
@@ -178,14 +194,14 @@
             </h4>
         </div>
     </div>
-    <div class="row px-4">
+    <div class="row pr-4 pl-0">
         <div class="col-lg-6 text-left cpr-lg-6">
             <h2> Our Clients </h2>
         </div>
         <div class="col-lg-6">
         </div>
     </div>
-    <div class="row px-4 cpb-lg-6">
+    <div class="row pr-4 cpb-lg-6 pl-0">
         <div class="col-lg-6 text-left cpr-lg-6">
             <p class="pr-lg-2 mt-4 pt-1">
                 We love partnering with people like us, the hustlers, the people who are out there making shit happen every day
