--- a/redhorn/src/app/pages/work/work.component.html
+++ b/redhorn/src/app/pages/work/work.component.html
@@ -1,11 +1,13 @@
-<div class="row cpt-lg-6" style="background-color: #ea0000;">
+<div style="background-color: #ea0000;">
     <div class="container">
-        <h1 style="color: #ffffff;text-align: left" class="vc_custom_heading">The work we do,</h1>
+        <div class="row cpt-lg-6">
+            <h1 style="color: #ffffff;text-align: left" class="vc_custom_heading fromleftfadeanimation">The work we do,</h1>
+        </div>
     </div>
 </div>
-<div class="row">
-    <div class="container">
-        <h1 style="color: #000000;text-align: left" class="vc_custom_heading">and the brands we help.</h1>
+<div class="container">
+    <div class="row">
+        <h1 style="color: #000000;text-align: left" class="vc_custom_heading fromleftfadeanimation">and the brands we help.</h1>
     </div>
 </div>
 
