--- a/redhorn/src/styles.scss
+++ b/redhorn/src/styles.scss
@@ -1,4 +1,5 @@
 
+//production version
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @import '~@angular/material/theming';
