done-fixing-animation-contactus-works

--- a/redhorn/src/app/pages/contact-us/contact-us.component.html
+++ b/redhorn/src/app/pages/contact-us/contact-us.component.html
@@ -1,9 +1,11 @@
 <div class="first_contact_page"  style="background-color: #F6F7F9;">
     <div class="container">
         <div class="row pb-5">
-            <div class="col-lg-8 pb-lg-3 fromleftfadeanimation">
-                <h1 class="pb-4">Hello, We’ve been expecting you.</h1>
-                <h6 class="custom_heading">— Interested in working with us? We’d love to hear from you.</h6>
+            <div class="col-lg-8 pb-lg-3">
+                <div class="fromleftfadeanimation">
+                    <h1 class="pb-4">Hello, We’ve been expecting you.</h1>
+                    <h6 class="custom_heading">— Interested in working with us? We’d love to hear from you.</h6>
+                </div>
             </div>
             <div class="col-lg-4"></div>
         </div>
