--- a/redhorn/src/app/layouts/red-bottom-row/red-bottom-row.component.html
+++ b/redhorn/src/app/layouts/red-bottom-row/red-bottom-row.component.html
@@ -4,16 +4,12 @@
             <div class="bg-img" style="background-image: url('https://www.redhorndigital.com/wp-content/uploads/2020/03/bg.svg');">
             </div>
             <div class="col-lg-6 cpx-lg-3 cpy-lg-3">
-                <div class="pl-4 fromleftfadeanimation" inViewport
-                    [inViewportOptions]="{ threshold: [0] }"
-                    (inViewportAction)="animate($event)">
+                <div class="pl-4 fromleftfadeanimation">
                     <h3>Ready to move fast and hard toward winning? Contact Us</h3>
                 </div>
             </div>
             <div class="col-lg-6 cpx-lg-3 cpy-lg-3 borderedBottomCol">
-                <div class="frombottomfadeanimation" inViewport
-                    [inViewportOptions]="{ threshold: [0] }"
-                    (inViewportAction)="animate($event)">
+                <div class="frombottomfadeanimation">
                     <h3 class="pb-2"><a class="light" href="#">+ Book a call</a><br><span class="borderBottom"></span></h3>
                     <h3 class="pb-2"><a class="light" href="#">+ contact@redhorn.com</a><br><span class="borderBottom"></span></h3>
                 </div>
