--- a/redhorn/src/app/layouts/footer/footer.component.scss
+++ b/redhorn/src/app/layouts/footer/footer.component.scss
@@ -5,12 +5,11 @@ div.row.footer {
     div.navbar ul { margin: 0px ; padding-bottom: 110px ; } 
     div.navbar ul li a { display: block ; padding: 0 15px ; color: #fff ; font-size: 18px ; 
         line-height: 36px ; } 
-    div.navbar ul li { list-style: none ; } 
     div.navbar ul li a:hover { color: #ff0000 ; }
     div.navbar ul li a.active { color: #ff0000 ; }
 }
 @media screen and (min-width: 999px) {
-    div.navbar ul li { display: inline-block ; } 
+    div.navbar ul li { list-style: none ; display: inline-block ; } 
     
 }
 @media screen and (max-width: 999px) {
