Revert "latest test by mohamed atef 5/15"

--- a/redhorn/src/app/pages/homepage/homepage.component.html
+++ b/redhorn/src/app/pages/homepage/homepage.component.html
@@ -2,6 +2,7 @@
     <div class="row cpt-lg-6 cpb-lg-3 cpt-sm-3">
         <div class="col-lg-7 col-sm-12 pb-4 dark pr-lg-5 pl-lg-0">
             <h1 class="pr-lg-5 pb-4 mb-lg-4 frombottomfadeanimation">
+                Reevaluate every other company that claims to be a partner
             </h1>
             <button type="button" class="btn btn-accent btn-mx-lg mt-lg-4 frombottomfadeanimation">
                 Learn More
@@ -55,7 +56,7 @@
                 <h2 class="pb-2">We want to get into the trenches</h2>
                 <div class="pb-3">
                     <p class="pb-3">And help you achieve the impossible; when you succeed, we succeed. We drive results and smash goals every day before breakfast. We’d love to smash yours, too.</p>
-                    <p>Need help with your B2B marketing? Get at us and we’ll ruin you for  all other agencies.</p>
+                    <p>Need help with your B2B marketing? Get at us and we’ll ruin you for all other agencies.</p>
                 </div>
                 <button type="button" class="btn btn-accent btn-mx-lg btn-block"> Book a no-nonsense 20 min consultation </button>
             </div>
