added animation library

--- a/redhorn/src/app/pages/homepage/homepage.component.html
+++ b/redhorn/src/app/pages/homepage/homepage.component.html
@@ -4,6 +4,11 @@
             <h1 class="pr-lg-5 pb-4 mb-lg-4 frombottomfadeanimation">
                 Reevaluate every other company that claims to be a partner
             </h1>
+            <div class="animate-view" wmAnimateView useElement cdkScrollable >
+
+               <h1 wmAnimate="flip" aos>hello there !!</h1>
+              
+              </div>
             <button type="button" class="btn btn-accent btn-mx-lg mt-lg-4 frombottomfadeanimation">
                 Learn More
             </button>
@@ -216,4 +221,5 @@
     <app-red-bottom-row></app-red-bottom-row>
     <div class="row pt-lg-4"></div>
     <div class="row pt-5 pb-5"></div>
+    <h2  class="content" fxLayout="row" fxLayoutAlign="center center" wmAnimate="bounceIn" aos>hello test</h2>
 </div>
