animation update aos

--- a/redhorn/src/app/pages/contact-us/contact-us.component.html
+++ b/redhorn/src/app/pages/contact-us/contact-us.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row pb-5">
             <div class="col-lg-8 pb-lg-3">
-                <div class="fromleftfadeanimation">
+                <div wmAnimate="fadeInRight" timing="0.2s" aos>
                     <h1 class="pb-4">Hello, We’ve been expecting you.</h1>
                     <h6 class="custom_heading">— Interested in working with us? We’d love to hear from you.</h6>
                 </div>
