--- a/redhorn/src/app/pages/homepage/homepage.component.html
+++ b/redhorn/src/app/pages/homepage/homepage.component.html
@@ -1,16 +1,10 @@
-<div class="container">
+<div class="container" wmAnimateView >
     <div class="row cpt-lg-6 cpb-lg-3 cpt-sm-3">
         <div class="col-lg-7 col-sm-12 pb-4 dark pr-lg-5 pl-lg-0">
-            <h1 class="pr-lg-5 pb-4 mb-lg-4 frombottomfadeanimation" 
-                inViewport
-                [inViewportOptions]="{ threshold: [0] }"
-                (inViewportAction)="animate($event)">
+            <h1 class="pr-lg-5 pb-4 mb-lg-4" wmAnimate="fadeInUp" timing="0s" aos>
                 Reevaluate every other company that claims to be a partner
             </h1>
-            <button type="button" class="btn btn-accent btn-mx-lg mt-lg-4 frombottomfadeanimation"
-                inViewport
-                [inViewportOptions]="{ threshold: [0] }"
-                (inViewportAction)="animate($event)">
+            <button type="button" class="btn btn-accent btn-mx-lg mt-lg-4"  wmAnimate="fadeInUp" timing="0s" aos>
                 Learn More
             </button>
         </div>
@@ -20,9 +14,7 @@
 <div class="container-fluid">
     <div class="row three-cols-second-row cpt-lg-6">
         <div class="col-lg-4 col-sm-12 pr-4 pr-lg-4 cpy-sm-6">
-            <div class="fromleftfadeanimation" inViewport
-                    [inViewportOptions]="{ threshold: [0] }"
-                    (inViewportAction)="animate($event)">
+            <div wmAnimate="fadeInRight" timing="0s" aos>
                 <div class="opt-col">
                     <img src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_636/https://www.redhorndigital.com/wp-content/uploads/2020/03/stripe-pattern-2.png" alt="">
                     <h1 class="py-lg-4 my-lg-4 pl-1 ml-1 mr-1"><span style="color: #0000003d !important;">We get </span> <br> shit done.</h1>
@@ -30,9 +22,7 @@
             </div>
         </div>
         <div class="col-lg-4 col-sm-12 pr-4 cpy-sm-6">
-            <div class="frombottomfadeanimation" inViewport
-                    [inViewportOptions]="{ threshold: [0] }"
-                    (inViewportAction)="animate($event)">
+            <div wmAnimate="fadeInUp" timing="0s" aos>
                 <div class="opt-col">
                     <h1 class="pt-1 pb-1 pl-2">
                         We<br>
@@ -43,10 +33,7 @@
             </div>
         </div>
         <div class="col-lg-4 col-sm-12 pr-4 cpy-sm-6">
-            <div class="fromrightfadeanimation"
-                    inViewport
-                    [inViewportOptions]="{ threshold: [0] }"
-                    (inViewportAction)="animate($event)">
+            <div wmAnimate="fadeInLeft" timing="0s" aos>
                 <div class="opt-col">
                     <h1 class="pt-1 pb-1 pl-2">
                         When<br>
@@ -61,15 +48,10 @@
 <div class="container">
     <div class="row pt-4 cpb-lg-6">
         <div class="col-lg-6 pl-lg-3">
-            <img class="img-fluid fromleftfadeanimation" src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_583/https://www.redhorndigital.com/wp-content/uploads/2020/03/rectangle.png"
-                inViewport
-                [inViewportOptions]="{ threshold: [0] }"
-                (inViewportAction)="animate($event)">
+            <img class="img-fluid" wmAnimate="fadeInRight" timing="0s" aos src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_583/https://www.redhorndigital.com/wp-content/uploads/2020/03/rectangle.png">
         </div>
         <div class="col-lg-6 pr-lg-3 pt-4">
-            <div class="fromrightfadeanimation" inViewport
-                [inViewportOptions]="{ threshold: [0] }"
-                (inViewportAction)="animate($event)">
+            <div wmAnimate="fadeInLeft" timing="0s" aos>
                 <h5 style="color: #7f7f7f ;" class="pb-3">We're not interested in being just a resource</h5>
                 <h2 class="pb-2">We want to get into the trenches</h2>
                 <div class="pb-3">
@@ -84,13 +66,9 @@
 <div class="container">
     <div class="row px-lg-5 cpt-lg-6 cpb-lg-6 cpy-lg-6 mt-5">
         <div class="col-lg-4 mt-lg-0 mt-4">
-            <img class="img-fluid frombottomfadeanimation" inViewport
-            [inViewportOptions]="{ threshold: [0] }"
-            (inViewportAction)="animate($event)" src="https://www.redhorndigital.com/wp-content/uploads/2020/03/research-branding-1.svg">
+            <img class="img-fluid" wmAnimate="fadeInUp" timing="0s" aos src="https://www.redhorndigital.com/wp-content/uploads/2020/03/research-branding-1.svg">
             <h4 class="mt-4 pt-2 pb-2">Research & Branding</h4>
-            <ul class="pl-0 pt-1 fromleftfadeanimation" inViewport
-                [inViewportOptions]="{ threshold: [0] }"
-                (inViewportAction)="animate($event)">
+            <ul class="pl-0 pt-1"  wmAnimate="fadeInRight" timing="0s" aos>
                 <li>Brand Strategy &amp; Experience</li>
                 <li>Guidelines &amp; Systems</li>
                 <li>Content Strategy</li>
@@ -99,13 +77,9 @@
             </ul>
         </div>
         <div class="col-lg-4 mt-lg-0 mt-4">
-            <img class="img-fluid frombottomfadeanimation" inViewport
-                [inViewportOptions]="{ threshold: [0] }"
-                (inViewportAction)="animate($event)" src="https://www.redhorndigital.com/wp-content/uploads/2020/03/web-digital.svg">
+            <img class="img-fluid" wmAnimate="fadeInUp" timing="0s" aos src="https://www.redhorndigital.com/wp-content/uploads/2020/03/web-digital.svg">
             <h4 class="mt-4 pt-2 pb-2">Web & Digital</h4>
-            <ul class="pl-0 pt-1 frombottomfadeanimation" inViewport
-                [inViewportOptions]="{ threshold: [0] }"
-                (inViewportAction)="animate($event)">
+            <ul class="pl-0 pt-1"  wmAnimate="fadeInUp" timing="0s" aos>
                 <li>Digital Strategy</li>
                 <li>UX &amp; UI Design</li>
                 <li>Functional Prototyping</li>
@@ -114,13 +88,9 @@
             </ul>
         </div>
         <div class="col-lg-4 mt-lg-0 mt-4">
-            <img class="img-fluid frombottomfadeanimation" inViewport
-                [inViewportOptions]="{ threshold: [0] }"
-                (inViewportAction)="animate($event)" src="https://www.redhorndigital.com/wp-content/uploads/2020/03/hypergrowth.svg">
+            <img class="img-fluid" wmAnimate="fadeInUp" timing="0s" aos src="https://www.redhorndigital.com/wp-content/uploads/2020/03/hypergrowth.svg">
             <h4 class="mt-4 pt-2 pb-2">Hypergrowth</h4>
-            <ul class="pl-0 pt-1 fromrightfadeanimation" inViewport
-                [inViewportOptions]="{ threshold: [0] }"
-                (inViewportAction)="animate($event)">
+            <ul class="pl-0 pt-1" wmAnimate="fadeInLeft" timing="0s" aos>
                 <li>Growth Strategy</li>
                 <li>Sales Enablement</li>
                 <li>Hubspot Account Creation &amp; Analytics</li>
@@ -147,9 +117,7 @@
             <div class="row cpt-lg-6 pl-lg-0 pb-lg-4 mb-4 py-4">
                 <div class="bg-img" id="huvr" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/graphic.png');">
                 </div>
-                <div class="col-lg-6 cpy-lg-6 cpl-lg-6 pr-5 light frombottomfadeanimation" inViewport
-                    [inViewportOptions]="{ threshold: [0] }"
-                    (inViewportAction)="animate($event)">
+                <div class="col-lg-6 cpy-lg-6 cpl-lg-6 pr-5 light" wmAnimate="fadeInUp" timing="0s" delay="0s" aos>
                     <p class="custom_row_details cpt-sm-3">+ branding, website redesign, product design, growth marketing</p>
                     <h3 class="pt-1">HUVR data —</h3>
                     <p class="pt-3 pb-5">We do the whole shebang and are killing it by putting millions of dollars into their sales pipeline.</p>
@@ -168,9 +136,7 @@
             <div class="row pl-lg-0 mb-4 py-4">
                 <div class="bg-img" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/graphic-1.png');">
                 </div>
-                <div class="col-lg-6 cpy-lg-3 cpl-lg-6 pr-5 dark frombottomfadeanimation" inViewport
-                    [inViewportOptions]="{ threshold: [0] }"
-                    (inViewportAction)="animate($event)">
+                <div class="col-lg-6 cpy-lg-3 cpl-lg-6 pr-5 dark" wmAnimate="fadeInUp" timing="0s" delay="0s" aos>
                     <p class="custom_row_details cpt-lg-3 cpt-sm-3" style="color: #888;">+ branding, website redesign</p>
                     <h3 class="pt-1">PMC —</h3>
                     <p class="pt-3 pb-5">Helping an almost 30 year old parking management company modernize for the next 30 years.</p>
@@ -189,9 +155,7 @@
             <div class="row cpt-lg-6 pb-lg-0 pl-lg-0 mb-4 py-4">
                 <div class="bg-img" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/graphic-2.png');">
                 </div>
-                <div class="col-lg-6 cpl-lg-6 pr-5 cpy-lg-6 light frombottomfadeanimation" inViewport
-                    [inViewportOptions]="{ threshold: [0] }"
-                    (inViewportAction)="animate($event)">
+                <div class="col-lg-6 cpl-lg-6 pr-5 cpy-lg-6 light" wmAnimate="fadeInUp" timing="0s" delay="0s" aos>
                     <p class="custom_row_details cpt-sm-3">+ branding, website redesign + development, paid media, growth marketing</p>
                     <h3 class="pt-1">Inzata —</h3>
                     <p class="pt-3 pb-5">We worked with Inzata to help with their branding, build a more robust website and manage their paid media to bring in more than 230 leads per week.</p>
@@ -210,9 +174,7 @@
             <div class="row cpt-lg-6 pl-lg-0 mb-4 py-4">
                 <div class="bg-img" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/ixrf-system.jpg');">
                 </div>
-                <div class="col-lg-6 cpl-lg-6 pr-5 cpy-lg-3 light frombottomfadeanimation" inViewport
-                    [inViewportOptions]="{ threshold: [0] }"
-                    (inViewportAction)="animate($event)">
+                <div class="col-lg-6 cpl-lg-6 pr-5 cpy-lg-3 light" wmAnimate="fadeInUp" timing="0s" delay="0s" aos>
                     <p class="custom_row_details pt-5">+ branding, website redesign, growth marketing</p>
                     <h3 class="pt-1">IXRF —</h3>
                     <p class="pt-3 pb-5">We worked with IXRF to help with their branding, build a more robust website and manage their paid media to bring in more than 230 leads per week.</p>
@@ -247,7 +209,7 @@
         </div>
         <div class="col-lg-6 text-center px-4 mt-4">
             <div class="px-lg-4">
-                <img class="img-fluid" src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_1605/https://www.redhorndigital.com/wp-content/uploads/2020/03/Feature-company-logos.png">
+                <img class="img-fluid" wmAnimate="fadeIn" timing="0.1s" aos src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_1605/https://www.redhorndigital.com/wp-content/uploads/2020/03/Feature-company-logos.png">
             </div>
         </div>
     </div>
