add all image in the project without external links

--- a/redhorn/src/app/layouts/red-bottom-row/red-bottom-row.component.html
+++ b/redhorn/src/app/layouts/red-bottom-row/red-bottom-row.component.html
@@ -1,7 +1,7 @@
 <div class="row pt-5 pt-lg-0">
     <div class="col-lg-12">
         <div class="row cpy-sm-3 redrow light">
-            <div class="bg-img" style="background-image: url('https://www.redhorndigital.com/wp-content/uploads/2020/03/bg.svg');">
+            <div class="bg-img" style="background-image: url('assets/images/bg.svg');">
             </div>
             <div class="col-lg-6 cpx-lg-3 cpy-lg-3">
                 <div class="pl-4" wmAnimate="fadeInRight" timing="0.1s" aos>
