--- a/redhorn/src/app/layouts/red-bottom-row/red-bottom-row.component.scss
+++ b/redhorn/src/app/layouts/red-bottom-row/red-bottom-row.component.scss
@@ -4,3 +4,4 @@ span.borderBottom { border-top: solid 1px #fff ; border-top: solid 1px #fff ; di
     div.borderedBottomCol h3:nth-child(1) span.borderBottom { width: 44% ; margin-left: 8%; }
     div.borderedBottomCol h3:nth-child(2) span.borderBottom { width: 92% ; margin-right: 0; margin-left: auto ;}
 }
+a:hover { text-decoration: none !important ; }
