--- a/redhorn/src/app/pages/capabilities/capabilities.component.html
+++ b/redhorn/src/app/pages/capabilities/capabilities.component.html
@@ -8,7 +8,7 @@
         </div>
         <div class="col-lg-1 col-md-0 text-center"></div>
         <div class="col-lg-7 col-md-6 col-sm-12 text-center">
-            <img class="img-fluid" wmAnimate="fadeInLeft" timing="0.1s" aos src="https://www.redhorndigital.com/wp-content/uploads/2020/03/capabilities-hero.svg">
+            <img class="img-fluid" wmAnimate="fadeInLeft" timing="0.1s" aos src="assets/images/capabilities-hero.svg">
         </div>
     </div>
     <div class="row light">
@@ -41,7 +41,7 @@
     </div>
     <div class="row capabilites_first_row pb-5">
         <div class="col-lg-4 mt-lg-0 mt-4">
-            <img class="img-fluid" wmAnimate="fadeInUp" timing="0.2s" aos src="https://www.redhorndigital.com/wp-content/uploads/2020/03/research-branding-1.svg">
+            <img class="img-fluid" wmAnimate="fadeInUp" timing="0.2s" aos src="assets/images/research-branding-1.svg">
             <h4 class="mt-4 pt-2 pb-2">Research & Branding</h4>
             <ul class="pl-0 pt-1" wmAnimate="fadeInRight" timing="0.2s" aos>
                 <li>Brand Strategy &amp; Experience</li>
@@ -52,7 +52,7 @@
             </ul>
         </div>
         <div class="col-lg-4 mt-lg-0 mt-4">
-            <img class="img-fluid" wmAnimate="fadeInUp" timing="0.2s" aos src="https://www.redhorndigital.com/wp-content/uploads/2020/03/web-digital.svg">
+            <img class="img-fluid" wmAnimate="fadeInUp" timing="0.2s" aos src="assets/images/web-digital.svg">
             <h4 class="mt-4 pt-2 pb-2">Web & Digital</h4>
             <ul class="pl-0 pt-1" wmAnimate="fadeInUp" timing="0.2s" aos>
                 <li>Digital Strategy</li>
@@ -63,7 +63,7 @@
             </ul>
         </div>
         <div class="col-lg-4 mt-lg-0 mt-4">
-            <img class="img-fluid" wmAnimate="fadeInUp" timing="0.2s" aos src="https://www.redhorndigital.com/wp-content/uploads/2020/03/hypergrowth.svg">
+            <img class="img-fluid" wmAnimate="fadeInUp" timing="0.2s" aos src="assets/images/hypergrowth.svg">
             <h4 class="mt-4 pt-2 pb-2">Hypergrowth</h4>
             <ul class="pl-0 pt-1" wmAnimate="fadeInLeft" timing="0.2s" aos>
                 <li>Growth Strategy</li>
