--- a/redhorn/src/app/pages/homepage/homepage.component.html
+++ b/redhorn/src/app/pages/homepage/homepage.component.html
@@ -16,7 +16,7 @@
         <div class="col-lg-4 col-sm-12 pr-4 pr-lg-4 cpy-sm-6">
             <div wmAnimate="fadeInRight" timing="0s" aos>
                 <div class="opt-col">
-                    <img src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_636/https://www.redhorndigital.com/wp-content/uploads/2020/03/stripe-pattern-2.png" alt="">
+                    <img src="assets/images/stripe-pattern-2.png" alt="">
                     <h1 class="py-lg-4 my-lg-4 pl-1 ml-1 mr-1"><span style="color: #0000003d !important;">We get </span> <br> shit done.</h1>
                 </div>
             </div>
@@ -48,7 +48,7 @@
 <div class="container">
     <div class="row pt-4 cpb-lg-6">
         <div class="col-lg-6 pl-lg-3">
-            <img class="img-fluid" wmAnimate="fadeInRight" timing="0s" aos src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_583/https://www.redhorndigital.com/wp-content/uploads/2020/03/rectangle.png">
+            <img class="img-fluid" wmAnimate="fadeInRight" timing="0s" aos src="assets/images/rectangle.png">
         </div>
         <div class="col-lg-6 pr-lg-3 pt-4">
             <div wmAnimate="fadeInLeft" timing="0s" aos>
@@ -66,7 +66,7 @@
 <div class="container">
     <div class="row px-lg-5 cpt-lg-6 cpb-lg-6 cpy-lg-6 mt-5">
         <div class="col-lg-4 mt-lg-0 mt-4">
-            <img class="img-fluid" wmAnimate="fadeInUp" timing="0s" aos src="https://www.redhorndigital.com/wp-content/uploads/2020/03/research-branding-1.svg">
+            <img class="img-fluid" wmAnimate="fadeInUp" timing="0s" aos src="assets/images/research-branding-1.svg">
             <h4 class="mt-4 pt-2 pb-2">Research & Branding</h4>
             <ul class="pl-0 pt-1"  wmAnimate="fadeInRight" timing="0s" aos>
                 <li>Brand Strategy &amp; Experience</li>
@@ -77,7 +77,7 @@
             </ul>
         </div>
         <div class="col-lg-4 mt-lg-0 mt-4">
-            <img class="img-fluid" wmAnimate="fadeInUp" timing="0s" aos src="https://www.redhorndigital.com/wp-content/uploads/2020/03/web-digital.svg">
+            <img class="img-fluid" wmAnimate="fadeInUp" timing="0s" aos src="assets/images/web-digital.svg">
             <h4 class="mt-4 pt-2 pb-2">Web & Digital</h4>
             <ul class="pl-0 pt-1"  wmAnimate="fadeInUp" timing="0s" aos>
                 <li>Digital Strategy</li>
@@ -88,7 +88,7 @@
             </ul>
         </div>
         <div class="col-lg-4 mt-lg-0 mt-4">
-            <img class="img-fluid" wmAnimate="fadeInUp" timing="0s" aos src="https://www.redhorndigital.com/wp-content/uploads/2020/03/hypergrowth.svg">
+            <img class="img-fluid" wmAnimate="fadeInUp" timing="0s" aos src="assets/images/hypergrowth.svg">
             <h4 class="mt-4 pt-2 pb-2">Hypergrowth</h4>
             <ul class="pl-0 pt-1" wmAnimate="fadeInLeft" timing="0s" aos>
                 <li>Growth Strategy</li>
@@ -115,7 +115,7 @@
     <div class="row cpt-lg-6 mt-lg-0 mt-4">
         <div class="col-lg-12">
             <div class="row cpt-lg-6 pl-lg-0 pb-lg-4 mb-4 py-4">
-                <div class="bg-img" id="huvr" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/graphic.png');">
+                <div class="bg-img" id="huvr" style="background-image: url('assets/images/graphic.png');">
                 </div>
                 <div class="col-lg-6 cpy-lg-6 cpl-lg-6 pr-5 light" wmAnimate="fadeInUp" timing="0s" delay="0s" aos>
                     <p class="custom_row_details cpt-sm-3">+ branding, website redesign, product design, growth marketing</p>
@@ -134,7 +134,7 @@
     <div class="row mt-5">
         <div class="col-lg-12">
             <div class="row pl-lg-0 mb-4 py-4">
-                <div class="bg-img" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/graphic-1.png');">
+                <div class="bg-img" style="background-image: url('assets/images/graphic-1.png');">
                 </div>
                 <div class="col-lg-6 cpy-lg-3 cpl-lg-6 pr-5 dark" wmAnimate="fadeInUp" timing="0s" delay="0s" aos>
                     <p class="custom_row_details cpt-lg-3 cpt-sm-3" style="color: #888;">+ branding, website redesign</p>
@@ -153,7 +153,7 @@
     <div class="row mt-5">
         <div class="col-lg-12">
             <div class="row cpt-lg-6 pb-lg-0 pl-lg-0 mb-4 py-4">
-                <div class="bg-img" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/graphic-2.png');">
+                <div class="bg-img" style="background-image: url('assets/images/graphic-2.png');">
                 </div>
                 <div class="col-lg-6 cpl-lg-6 pr-5 cpy-lg-6 light" wmAnimate="fadeInUp" timing="0s" delay="0s" aos>
                     <p class="custom_row_details cpt-sm-3">+ branding, website redesign + development, paid media, growth marketing</p>
@@ -172,7 +172,7 @@
     <div class="row my-5">
         <div class="col-lg-12">
             <div class="row cpt-lg-6 pl-lg-0 mb-4 py-4">
-                <div class="bg-img" style="background-image: url('https://cdn.shortpixel.ai/client/q_glossy,ret_img/https://www.redhorndigital.com/wp-content/uploads/2020/03/ixrf-system.jpg');">
+                <div class="bg-img" style="background-image: url('assets/images/ixrf-system.jpg');">
                 </div>
                 <div class="col-lg-6 cpl-lg-6 pr-5 cpy-lg-3 light" wmAnimate="fadeInUp" timing="0s" delay="0s" aos>
                     <p class="custom_row_details pt-5">+ branding, website redesign, growth marketing</p>
@@ -209,7 +209,7 @@
         </div>
         <div class="col-lg-6 text-center px-4 mt-4">
             <div class="px-lg-4">
-                <img class="img-fluid" wmAnimate="fadeIn" timing="0.1s" aos src="https://cdn.shortpixel.ai/client/q_glossy,ret_img,w_1605/https://www.redhorndigital.com/wp-content/uploads/2020/03/Feature-company-logos.png">
+                <img class="img-fluid" wmAnimate="fadeIn" timing="0.1s" aos src="assets/images/Feature-company-logos.png">
             </div>
         </div>
     </div>
