update all animations

--- a/redhorn/src/app/pages/work/work.component.html
+++ b/redhorn/src/app/pages/work/work.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row cpt-lg-6">
             <div class="col-lg-12">
-                <div wmAnimate="fadeInRight" timing="0.2s" aos>
+                <div wmAnimate="fadeInRight" timing="0.2s" once="1" aos>
                     <h1 style="color: #ffffff;text-align: left" class="vc_custom_heading">The work we do,</h1>
                 </div>
             </div>
@@ -12,7 +12,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
-            <div wmAnimate="fadeInRight" timing="0.2s" aos>
+            <div wmAnimate="fadeInRight" timing="0.2s" once="1" aos>
                 <h1 style="color: #000000;text-align: left" class="vc_custom_heading">and the brands we help.</h1>
             </div>
         </div>
