--- a/redhorn/src/app/layouts/header/header.component.scss
+++ b/redhorn/src/app/layouts/header/header.component.scss
@@ -49,4 +49,11 @@ div#header.light:not(.sticky) {  img.dark_logo { display: none ; } img.light_log
     div.sm_navbar_container ul li a { color: #fff ; font-size: 19px ; }
     div.close { width: 100% ; text-align: right ; color: #fff ; opacity: 1 ; position: relative ; top: -1em ; padding-right: 20px ; }
     div.close button { color: #fff ; opacity: 1 ; }
+    div#header.dark , div#header.light.sticky { 
+        button.menu_button { color: #ff0000 !important ; }
+    }
+    div#header.light:not(.sticky) { 
+        button.menu_button { color: #fff !important ; }
+    }
+    div#header:not(.dark):not(.light) { color: #ff0000 ; }
 }
